Spacing fixes

--- a/src/components/payment-request/index.scss
+++ b/src/components/payment-request/index.scss
@@ -6,7 +6,7 @@
     font-weight: 600;
     font-size: 15px;
     color: #F75C1A;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
   }
 
   .payment-request-top {
